force-app/main/default/objects/custom_create303__c/custom_create303__c.object-meta.xml
<CustomObject>
    <label>Custom created object303</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects303</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>