force-app/main/default/objects/custom_create303__c/fields/custom_create_303field719__c.field-meta.xml
<CustomField>
    <fullName>custom_create_303field719__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 303field719</label>
    <type>Checkbox</type>
</CustomField>